static/css/style.css
    @font-face {
          font-family: 'Inter';
          font-style: normal;
          src: url('/fonts/Inter.woff2') format("woff2");
          font-display: swap;
          font-weight: 1 999;  
        }
        
    @font-face {
          font-family: 'IBM';
          font-style: normal;
          src: url('/fonts/ibm-plex-light.otf');
          font-display: swap;
          font-weight: 200;  
        }

    @font-face {
          font-family: 'IBM';
          font-style: normal;
          src: url('/fonts/ibm-plex.otf');
          font-display: swap;
          font-weight: 400;  
        }

     @font-face {
          font-family: 'IBM';
          font-style: normal;
          src: url('/fonts/ibm-plex-bold.otf');
          font-display: swap;
          font-weight: 600;  
        }

    @font-face {
          font-family: 'LCD';
          font-style: normal;
          src: url('/fonts/DIGITALDREAM.ttf');
          font-display: swap;
          font-weight: 400;  
        }

    :root{
      --background: #000;
      --text: #F59E02;
      --highlight: #FF7C40;
    }

    body{
      margin: 0px;
      background: var(--background);
      font-family: Inter;
    }

    img{
      width: 100%;
    }

    .title-bar{
      height: 5rem;
      border-bottom: solid 1px var(--text);
      left: 0;
      top: 0;
      width: 100%;
      box-sizing: border-box;
      text-align: left;
      padding-left: 4rem;
      position: sticky;
      background: var(--background);
      opacity: 0.9;
      z-index: 2;
    }

    .title-bar h1{
      line-height: 5rem;
      font-weight: 800;
      font-family: IBM;
      margin: 0px;
    }

   /* main{
      width: calc(100% - 21rem);
      position: relative;
      color: var(--text);
      font-family: IBM;
      -webkit-font-smoothing: antialiased;
      padding: 3rem;
    }*/

    main{
/*      display: none;*/
        color: var(--text);
        font-weight: 400;
        position: relative;
    }

    article{
      padding: 2rem 10rem;
      display: inline-block;
      box-sizing: border-box;
      text-align: left;
      max-width: calc(100% - 20rem);
      font-size: 18px;
      line-height: 1.5em;
      position: relative;
    }

    p{
      margin: 1.5em 0px;
      line-height: 1.7em;
    }

    article a{
      background: rgba(245, 158, 0, 0.4);
      opacity: 0.7;
      transition: all ease 0.4s;
      padding: 0px 4px 2px 4px;
      border-radius: 3px;
    }

    article a:hover{
      opacity: 1;
      background: rgba(245, 158, 0, 0.4);
      transition: all ease 0.4s;
    }

    a{
      color: var(--text);
      text-decoration: none;
    }

    .subtitle{
      font-weight: 400;
      font-size: 0.8rem;
    }

    .progress{
      height: calc(82vh);
      width: 0.5rem;
      border: solid 1px var(--text);
      display: inline-block;
      position: fixed;
      left: 2rem;
      top: 7rem;
    }

    .progress-inside{
      width: 100%;
      height: 0%;
      background: var(--text);
      transition: 0.1s height linear;
    }

    .slider {
      -webkit-appearance: none;
      width: 100%;
      height: 1px;
      background: #F59E02;
      outline: none;
      -webkit-transition: .2s;
      transition: opacity .2s;
      margin: 2rem 0rem;
    }

    .slider::-webkit-slider-thumb {
      -webkit-appearance: none;
      appearance: none;
      width: 5px;
      height: 15px;
      background: #F59E02;
      cursor: pointer;
    }

    .slider::-moz-range-thumb {
      width: 25px;
      height: 25px;
      background: #F59E02;
      cursor: pointer;
    }

    pre, code{
      background: var(--text);
      color: var(--background);
      font-family: IBM;
      font-weight: 200;
      padding: 1px 3px;
      opacity: 0.9;
    }

    pre{
      width: 100%;
      word-break: break-word;
      white-space: pre-wrap;
    }

    h2{
      font-size: 1.6rem;
      margin: 4rem 0rem 2rem 0rem;
      font-family: Inter;
      font-weight: 900;
    }

    h3{
      font-size: 1.2rem;
      margin: 3rem 0rem 0rem 0rem;
      font-family: IBM;
      font-weight: 600;
    }

    blockquote{
      padding: 1rem 2rem;
      font-family: Inter;
      background: rgba(245, 158, 0, 0.4);
      margin: 0px;
    }

    ol, ul{
      margin: 2.5em 0em;
    }

    li{
      margin: 1rem 0rem;
    }

    .mobile-menu{
      position: sticky;
      z-index: 2;
      width: 100%;
      left: 0;
      height: fit-content;
      display: none;
      font-size: 0px;
    }

    .option{
      color: var(--background);
      background: var(--text);
      width: 33.33%;
      display: inline-block;
      padding: 1rem;
      box-sizing: border-box;
      text-align: center;
      border: solid 1px var(--background);
    }

    @media screen and (max-width: 1100px) {

        .mobile-menu{
          display: block;
          position: sticky;
          top: 0;
        }
    }

